cover.css
/*
 * Globals
 */
@font-face {
    font-family: 'Avenir Next Bold';
    src: url('./fonts/avenir-next/bold.eot');
    src: url('./fonts/avenir-next/bold.eot?#iefix') format('embedded-opentype'),
    url('./fonts/avenir-next/bold.woff2') format('woff2'),
    url('./fonts/avenir-next/bold.woff') format('woff'),
    url('./fonts/avenir-next/bold.ttf') format('truetype');
    font-weight: 700;
}

@font-face {
    font-family: 'Avenir Next Demi';
    src: url('./fonts/avenir-next/demi.eot');
    src: url('./fonts/avenir-next/demi.eot?#iefix') format('embedded-opentype'),
    url('./fonts/avenir-next/demi.woff2') format('woff2'),
    url('./fonts/avenir-next/demi.woff') format('woff'),
    url('./fonts/avenir-next/demi.ttf') format('truetype');
    font-weight: 600;
}

@font-face {
    font-family: 'Avenir Next Medium';
    src: url('./fonts/avenir-next/medium.eot');
    src: url('./fonts/avenir-next/medium.eot?#iefix') format('embedded-opentype'),
    url('./fonts/avenir-next/medium.woff') format('woff'),
    url('./fonts/avenir-next/medium.ttf') format('truetype');
    font-weight: 500;
}

@font-face {
    font-family: 'Avenir Next Regular';
    src: url('./fonts/avenir-next/regular.eot');
    src: url('./fonts/avenir-next/regular.eot?#iefix') format('embedded-opentype'),
    url('./fonts/avenir-next/regular.woff') format('woff'),
    url('./fonts/avenir-next/regular.ttf') format('truetype');
    font-weight: 400;
}

@font-face {
    font-family: 'Avenir Next Thin';
    src: url('./fonts/avenir-next/thin.eot');
    src: url('./fonts/avenir-next/thin.eot?#iefix') format('embedded-opentype'),
    url('./fonts/avenir-next/thin.woff2') format('woff2'),
    url('./fonts/avenir-next/thin.woff') format('woff'),
    url('./fonts/avenir-next/thin.ttf') format('truetype');
    font-weight: 300;
}

@font-face {
    font-family: 'Avenir Next Ultra Light';
    src: url('./fonts/avenir-next/ultralight.eot');
    src: url('./fonts/avenir-next/ultralight.eot?#iefix') format('embedded-opentype'),
    url('./fonts/avenir-next/ultralight.woff') format('woff'),
    url('./fonts/avenir-next/ultralight.ttf') format('truetype');
    font-weight: 200;
}

/* Links */
a:link {
    color: #c77966;
    text-decoration: none;
}

a:visited,
a:hover {
    color: #c77966;
    text-decoration: underline;
}

/* Custom default button */
.btn-default,
.btn-default:hover,
.btn-default:focus {
    color: #2f343b;
    background-color: #2f343b;
}

/*
 * Base structure
 */
html,
body {
    height: 100%;
    background-color: #2f343b;
}
body {
    font-family: "Avenir Next Regular";
    color: #7e827a;
}

/*
 * Custom (not about bootstrap)
 */
ul,
li,
p {
    font-size: 16px;
    line-height: 150%;
}
.p-heading {
    font-family: "Avenir Next Thin";
    font-size: 32px;
    color: #e3cda4;
}
.p-subheading {
    font-family: "Avenir Next Thin";
    font-size: 24px;
    color: #e3cda4;
}

.emph {
    color: #e3cda4;
}

/* Extra markup and styles for table-esque vertical and horizontal centering */
.site-wrapper {
    display: table;
    width: 100%;
    height: 100%; /* For at least Firefox */
    min-height: 100%;
}
.site-wrapper-inner {
    display: table-cell;
    vertical-align: top;
}
.cover-container {
    margin-right: auto;
    margin-left: auto;
}

/* Padding for spacing */
.inner {
    padding: 30px;
}



/*
 * Header
 */
/* Bootstrap overrides */
.nav > li > a {
  padding: 0px 0px;
}
/* Bootstrap overrides end */

.masthead {
    background-color: #2f343b;
}

.masthead-brand {
    margin-top: 10px;
    margin-bottom: 10px;
}

.masthead-nav > li {
    display: inline-block;
}
.masthead-nav > li + li {
    margin-left: 20px;
}
.masthead-nav > li > a {
    padding-right: 0;
    padding-left: 0;
    font-size: 16px;
    font-weight: bold;
    color: #7e827a; /* IE8 proofing */
    border-bottom: 2px solid transparent;
}
.masthead-nav > li > a:hover,
.masthead-nav > li > a:focus {
    background-color: #2f343b;
    border-bottom-color: #703030;
}
.masthead-nav > .active > a,
.masthead-nav > .active > a:hover,
.masthead-nav > .active > a:focus {
    font-family: "Avenir Next Medium";
    color: #7e827a;
    border-bottom-color: #c77966;
}

@media (min-width: 768px) {
  .masthead-brand {
    float: left;
  }
  .masthead-nav {
    float: right;
  }
}


/*
 * Cover
 */

.cover {
  padding: 0 20px;
}
.cover .btn-lg {
  padding: 10px 20px;
  font-weight: bold;
}


/*
 * Footer
 */

.mastfoot {
  color: #703030; /* IE8 proofing */
}


/*
 * Affix and center
 */

@media (min-width: 768px) {
  /* Pull out the header and footer */
  .masthead {
    position: fixed;
    top: 0;
  }
  .mastfoot {
    position: fixed;
    bottom: 0;
  }
  /* Start the vertical centering */
  .site-wrapper-inner {
    vertical-align: middle;
  }
  /* Handle the widths */
  .masthead,
  .mastfoot,
  .cover-container {
    width: 100%; /* Must be percentage or pixels for horizontal alignment */
  }
}

@media (min-width: 992px) {
  .masthead,
  .mastfoot,
  .cover-container {
    width: 700px;
  }
}

